test/gpu/native/errors/gpuTrace.devel.poi.good
gpuTrace.chpl:10: In function 'main':
gpuTrace.chpl:12: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
gpuTrace.chpl:6: note: function is marked as not eligible for GPU execution
std/MyMod.chpl:13: note:   reached via call to 'convertToString' here
std/MyMod.chpl:17: note:   reached via call to 'doSomethingElsePOI' here
gpuTrace.chpl:14: note:   reached via call to 'doSomethingPOI' in loop body here
